# magnetic_belt_optimization

./: LICENSE  README.md  parametrization.py  pyproject.toml  requirements.txt  sample_belt.py
optimization_results/: best_parameters.json
optimization_results/1_adam_experiment/: best_parameters.json
optimization_results/3_adam_experiment/: best_parameters.json
optimization_results/adam_experiment_20250520_173057/: best_parameters.json
optimization_results/adam_experiment_default/: best_parameters.json
optimization_results/experiment_20250507_164252/: optimization_history.json
src/: compare_optimization.py  evolutionary_halbach.py  parametrization.py  sample_belt.py  statistic_collection.py
src/cube_magnets/: cuboids_adam.py  cuboids_parametrization.py
src/cylinder_magnets/: cylinders_adam_orthogonal.py  cylinders_parametrization_orthogonal.py  cylinders_parametrization_parallel.py
src/sample/: sample_belt.py
src/statistics/: statistic_collection.py
