[project]
name = "magnetic-belt-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "magpylib>=5.1.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "ruff>=0.11.8",
    "scipy>=1.15.2",
    "seaborn>=0.12.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
